@@ -1083,6 +1083,32 @@ The expression to evaluate when this action is invoked.
 					</xsd:documentation>
 				</xsd:annotation>
 			</xsd:attribute>
+			<xsd:attribute name="name" type="xsd:string">
+				<xsd:annotation>
+					<xsd:documentation>
+						<![CDATA[
+An optional name qualifier for this evaluate action. When specified this action will
+qualify execution result event identifiers by this name.  For example, if this
+action is named "placeOrder" and signals a "success" result event after execution,
+the fully qualified result event the flow can respond to would be "placeOrder.success".
+<br>
+This can be used to execute actions in an ordered chain, where the flow responds 
+to the the last action result in the chain:
+<pre>
+    &lt;action-state id="setupForm"&gt;
+        &lt;action name="setupForm" bean="formAction" method="setupForm"/&gt;
+        &lt;action name="loadReferenceData" bean="formAction" method="loadReferenceData"/&gt;
+        &lt;transition on="loadReferenceData.success" to="displayForm"&gt;
+    &lt;/action-state&gt;
+</pre>
+... will execute 'setupForm' followed by 'loadRefenceData', then transition the flow to
+the 'displayForm' state on a successful 'loadReferenceData' invocation.
+<br>
+An action with a name is often referred to as a "named action".
+]]>
+					</xsd:documentation>
+				</xsd:annotation>
+			</xsd:attribute>
 		</xsd:complexType>
 	</xsd:element>
 
@@ -1163,6 +1189,32 @@ If not specified the default scope type is used ('request' by default).
 					<xsd:documentation>
 						<![CDATA[
 The attribute value expression.
+]]>
+					</xsd:documentation>
+				</xsd:annotation>
+			</xsd:attribute>
+			<xsd:attribute name="name" type="xsd:string">
+				<xsd:annotation>
+					<xsd:documentation>
+						<![CDATA[
+An optional name qualifier for this set action. When specified this action will
+qualify execution result event identifiers by this name.  For example, if this
+action is named "placeOrder" and signals a "success" result event after execution,
+the fully qualified result event the flow can respond to would be "placeOrder.success".
+<br>
+This can be used to execute actions in an ordered chain, where the flow responds 
+to the the last action result in the chain:
+<pre>
+    &lt;action-state id="setupForm"&gt;
+        &lt;action name="setupForm" bean="formAction" method="setupForm"/&gt;
+        &lt;action name="loadReferenceData" bean="formAction" method="loadReferenceData"/&gt;
+        &lt;transition on="loadReferenceData.success" to="displayForm"&gt;
+    &lt;/action-state&gt;
+</pre>
+... will execute 'setupForm' followed by 'loadRefenceData', then transition the flow to
+the 'displayForm' state on a successful 'loadReferenceData' invocation.
+<br>
+An action with a name is often referred to as a "named action".
 ]]>
 					</xsd:documentation>
 				</xsd:annotation>
