@@ -56,20 +56,20 @@
 	</action-state>
 
 	<action-state id="actionState7">
-		<evaluate-action expression="flowScope.bean.flag">
+		<evaluate-action name="evaluator" expression="flowScope.bean.flag">
 			<evaluation-result name="flag"/>
 		</evaluate-action>
-		<transition on="yes" to="evalFlag"/>
-		<transition on="no" to="evalFlag"/>
+		<transition on="evaluator.yes" to="evalFlag"/>
+		<transition on="evaluator.no" to="evalFlag"/>
 	</action-state>
 	
 	<decision-state id="evalFlag">
-		<if test="requestScope.flag" then="end" else="actionState8"/>
+		<if test="requestScope.flag" then="actionState8" else="actionState8"/>
 	</decision-state>
 	
 	<action-state id="actionState8">
-		<set attribute="bean.flag" scope="flow" value="true"/>
-		<transition on="success" to="actionState7"/>
+		<set name="setter" attribute="bean.flag" scope="flow" value="true"/>
+		<transition on="setter.success" to="pause"/>
 	</action-state>
 	
 	<view-state id="pause">
